--- a/index.html
+++ b/index.html
@@ -29,7 +29,9 @@
     </div>
   </header>
 
-  <main class="container">
+  <main>
+  <div class="hero-wrap">
+    <div class="container">
     <section class="hero">
       <div class="hero-copy">
         <h1>Easily Create a Minecraft Server Starter Pack</h1>
